--- a/App/public/css/cover.css
+++ b/App/public/css/cover.css
@@ -1,5 +1,8 @@
 body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
+body, html {
+    height: 100%;
+    cursor: pointer;
+}
 .bgimg {
     min-height: 100%;
     background: url('../assets/img/cover.jpg') center;
