Button Lunch mail done

--- a/app/public/views/login_signin/index.html
+++ b/app/public/views/login_signin/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Matcha - *Action*</title>
     <link rel="stylesheet" href="../../css/mail.css">
+    <link rel="stylesheet" href="../../css/cover.css">
 </head>
 <body>
 <!--====== VALIDE ======-->
-<div id="container">
+<div class="bgimg" style="">
     <div class="frame">
         <input type="checkbox" id="cb">
         <div class="container">
