--- a/app/public/views/login_signin/index.html
+++ b/app/public/views/login_signin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Matcha - *Action*</title>
+    <title>Matcha - Email</title>
     <link rel="stylesheet" href="../../css/mail.css">
     <link rel="stylesheet" href="../../css/cover.css">
 </head>
