JS sign in client side done and now smooth !
tiny fix css

instant SQL email check validity onfocusout

username length reduced to 15

Tiny fix on Install part of the README

serverside check added (on progress...)

Almost ready to INSERT INTO a New User

--- a/app/public/css/sign-in.css
+++ b/app/public/css/sign-in.css
@@ -313,7 +313,8 @@ background text
 }
 
 .cont_form_sign_up > h2 {
-    margin-top: 12px;
+    margin-top: 5px;
+    margin-bottom: 0;
     font-weight: 400;
     color: #757575;
 }
