--- a/app/public/views/index.html
+++ b/app/public/views/index.html
@@ -33,7 +33,7 @@
 
                         <h2>LOGIN</h2>
                         <p>Glad to see you again !</p>
-                        <button id="initBT" class="btn_login" onclick="cambiar_login()">LOGIN</button>
+                        <button id="initBT" class="btn_login" onclick="cambiarLogin()">LOGIN</button>
                     </div>
                 </div>
                 <div class="col_md_sign_up">
@@ -41,7 +41,7 @@
 
                         <h2>SIGN UP</h2>
                         <p>Your match is waiting for you !</p>
-                        <button class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
+                        <button class="btn_sign_up" onclick="cambiarSignUp()">SIGN UP</button>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                     <h2>LOGIN</h2>
                     <input type="email" id="login_email" name="email" minlength="3" maxlength="254" placeholder="Email">
                     <input type="password" id="login_password" name="password" minlength="6" maxlength="20" placeholder="Password">
-                    <button id="loginButton" class="btn_login" onclick="cambiar_login()">LOGIN</button>
+                    <button id="loginButton" class="btn_login" onclick="cambiarLogin()">LOGIN</button>
                 </div>
                 <div class="cont_form_sign_up">
                     <h2>SIGN UP</h2>
@@ -71,7 +71,7 @@
                     <input type="text" id="sign_up_user" name="user" minlength="2" maxlength="15" placeholder="User">
                     <input type="password" id="sign_up_password" name="password" minlength="6" maxlength="20" placeholder="Password">
                     <input type="password" id="sign_up_confirm_password" name="confirm_password" minlength="6" maxlength="20" placeholder="Confirm Password">
-                    <button id="subscribeButton" class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
+                    <button id="subscribeButton" class="btn_sign_up" onclick="cambiarSignUp()">SIGN UP</button>
 
                 </div>
             </div>
