--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="../css/cover.css">
-    <link rel="stylesheet" href="../css/sign-in.css">
+    <link rel="stylesheet" href="/assets/css/cover.css">
+    <link rel="stylesheet" href="/assets/css/sign-in.css">
 </head>
 <body>
 <!--====== COVER ======-->
@@ -80,9 +80,9 @@
     </div>
 </div>
 <!--====== /LOGIN ======-->
-<script src="../js/sweetalert2.all.js"></script>
+<script src="/assets/js/sweetalert2.all.js"></script>
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
-<script src="../js/cover.js" language="JavaScript"></script>
-<script src="../js/login_signup.js" language="JavaScript"></script>
+<script src="/assets/js/cover.js" language="JavaScript"></script>
+<script src="/assets/js/login_signup.js" language="JavaScript"></script>
 </body>
 </html>
