--- a/views/login_signin/email.ejs
+++ b/views/login_signin/email.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Matcha - Email</title>
-    <link rel="stylesheet" href="../../css/mail.css">
-    <link rel="stylesheet" href="../../css/cover.css">
+    <link rel="stylesheet" href="assets/css/mail.css">
+    <link rel="stylesheet" href="assets/css/cover.css">
 </head>
 <body>
 <div class="bgimg" style="">
