CSS fix on index HTML fix on index JS fix on index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Matcha Bootstarp Website Template | Home :: w3layouts</title>
+<title>Matcha | Home</title>
 <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
-<!-- Custom Theme files -->
 <link href="/assets/css/style.css" rel='stylesheet' type='text/css' />
-<!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--webfont-->
 <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<!--dropdown-->
-<script src="../assets/js/jquery-1.11.1.min.js"></script>
-<script src="../assets/js/jquery.easydropdown.js"></script>
-<!-- FlexSlider -->
 <link href="/assets/css/flexslider.css" rel='stylesheet' type='text/css' />
-							  <script defer src="../assets/js/jquery.flexslider.js"></script>
-							  <script type="text/javascript">
-								$(function(){
-								  SyntaxHighlighter.all();
-								});
-								$(window).load(function(){
-								  $('.flexslider').flexslider({
-									animation: "slide",
-									start: function(slider){
-									  $('body').removeClass('loading');
-									}
-								  });
-								});
-							  </script>
-<!-- FlexSlider -->
-<!--Animation-->
-<script src="../assets/js/wow.min.js"></script>
 <link href="/assets/css/animate.css" rel='stylesheet' type='text/css' />
-<script>
-	new WOW().init();
-</script>
 </head>
 <body>
 <div class="header wow fadeInUp" data-wow-delay="0.4s">
@@ -172,5 +144,12 @@
 	    <div class='clearfix'> </div>
 	</div>
 </div>
+
+<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>
+<script defer src="/assets/js/jquery.flexslider.js" language="JavaScript"></script>
+<script src="/assets/js/wow.min.js" language="JavaScript"></script>
+<script src="/assets/js/index.js" language="JavaScript"></script>
+
 </body>
 </html>		
