COOKIES: THE RETURN

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -85,6 +85,8 @@
 </body>
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
 <script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
-<script src="/assets/js/sweetalert2.all.js" language="JavaScript"></script>
+<!--<script src="/assets/js/sweetalert2.all.js" language="JavaScript"></script>-->
+<script src="/node_modules//sweetalert2.all.js" language="JavaScript"></script>
+<script src="/node_modules/js-cookie/src/js.cookie.js"></script>
 <script src="/assets/js/login.js" language="JavaScript"></script>
 </html>
