SweetAlert and JS-Cookie are now managed by npm

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,13 +45,13 @@
 				 <div class="register-top-grid">
 					<h3>PERSONAL INFORMATION</h3>
 					 <div>
-						<span>Username<label>*</label></span>
-						<input id="sign_up_user" type="text">
-					 </div>
-					 <div>
 						 <span>Email Address<label>*</label></span>
 						 <input id="sign_up_email" type="text">
 					 </div>
+                     <div>
+                         <span>Username<label>*</label></span>
+                         <input id="sign_up_user" type="text">
+                     </div>
 					 <div class="clearfix"> </div>
 					   <a class="news-letter" href="#">
 						 <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Sign Up for Newsletter</label>
@@ -99,7 +99,7 @@
 </div>
 
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
-<script src="/assets/js/sweetalert2.all.js" language="JavaScript"></script>
+<script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
 <script src="/assets/js/register.js" language="JavaScript"></script>
 </body>
