--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -1,15 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
     <link href="/assets/css/style.css" rel='stylesheet' type='text/css' />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <script src="../assets/js/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <div class="header">
     <div class='container'>
@@ -264,5 +262,11 @@
         <div class='clearfix'> </div>
     </div>
 </div>
+
+<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" language="JavaScript"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" language="JavaScript"></script>
+<script src="/assets/js/profil.js" language="JavaScript"></script>
+
 </body>
 </html>
