Jquery-js gérer par NPM

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -117,7 +117,7 @@
     </div>
 </div>
 
-<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/assets/js/contact.js" language="JavaScript"></script>
 </body>
 </html>
