--- a/views/index.ejs
+++ b/views/index.ejs
@@ -148,7 +148,7 @@
     </div>
 </div>
 
-<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>
 <script defer src="/assets/js/jquery.flexslider.js" language="JavaScript"></script>
 <script src="/node_modules/wowjs/dist/wow.min.js" language="JavaScript"></script>
