--- a/views/login.ejs
+++ b/views/login.ejs
@@ -88,7 +88,7 @@
 </div>
 </body>
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
-<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script src="/node_modules/js-cookie/src/js.cookie.js" language="JavaScript"></script>
 <script src="/assets/js/login.js" language="JavaScript"></script>
