--- a/views/about.ejs
+++ b/views/about.ejs
@@ -158,7 +158,7 @@
     </div>
 </div>
 
-<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/node_modules/wowjs/dist/wow.min.js" language="JavaScript"></script>
 <script src="/assets/js/about.js" language="JavaScript">
 
