--- a/views/register.ejs
+++ b/views/register.ejs
@@ -104,7 +104,7 @@
 
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
 <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
-<script src="/assets/js/jquery-1.11.1.min.js" language="JavaScript"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/assets/js/register.js" language="JavaScript"></script>
 </body>
 </html>
