--- a/views/single.ejs
+++ b/views/single.ejs
@@ -190,7 +190,7 @@
     </div>
 </div>
 
-<script src="/assets/js/jquery-1.11.1.min.js"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/assets/js/single.js"></script>
 </body>
 </html>
