flexslider gérer par NPM

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -150,7 +150,7 @@
 
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>
-<script defer src="/assets/js/jquery.flexslider.js" language="JavaScript"></script>
+<script defer src="/node_modules/flexslider/jquery.flexslider-min.js" language="JavaScript"></script>
 <script src="/node_modules/wowjs/dist/wow.min.js" language="JavaScript"></script>
 <script src="/assets/js/index.js" language="JavaScript"></script>
 
